Fix typos in R6RS library naming convention.

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -791,7 +791,7 @@ using heterogeneous vectors.</li>
 
 <li><code>srfi/4.sld</code> - R7RS library for SRFI 4.</li>
 
-<li><code>srfi/%2f4.sls</code> - R6RS library for SRFI 4.</li>
+<li><code>srfi/%3a4.sls</code> - R6RS library for SRFI 4.</li>
 
 <li><code>srfi/bitvectors.scm</code> - SRFI-4-like implementation of u1vectors using u8vectors.</li>
 
@@ -810,7 +810,7 @@ using heterogeneous vectors.</li>
 <ul>
 <li><code>srfi.160.at.scm</code> - Chicken libraries on top of native Chicken SRFI 4</li>
 
-<li><code>srfi/%2f160/at.scm</code> - Guile libraries on top of native Guile SRFI 4.
+<li><code>srfi/%3a160/at.scm</code> - Guile libraries on top of native Guile SRFI 4.
 Can be adapted to any R6RS system that provides <code>include</code>.</li>
 
 <li><code>srfi/160/at.scm</code> - Chibi libraries on top of SRFI 4.
