--- a/srfi-160.html
+++ b/srfi-160.html
@@ -28,6 +28,7 @@ John Cowan (based on SRFI 4 by Marc Feeley)
   <li>Draft #2 published: 2018/9/2</li>
   <li>Draft #3 published: 2018/9/8</li>
   <li>Draft #4 published: 2018/10/10</li>
+  <li>Draft #5 published: 2018/10/30</li>
 </ul>
 
 <H1>Abstract</H1>
