Publish sixth draft.

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -29,6 +29,7 @@ John Cowan (based on SRFI 4 by Marc Feeley)
   <li>Draft #3 published: 2018/9/8</li>
   <li>Draft #4 published: 2018/10/10</li>
   <li>Draft #5 published: 2018/10/30</li>
+  <li>Draft #6 published: 2018/12/6</li>
 </ul>
 
 <H1>Abstract</H1>
